# fraud_detection

./: .coverage  .coverage.Madhumithas-MacBook-Air_local.pid5825.Xgh79mIx.HNQIp837rWOh  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-airflow.txt  validate_output.txt
.github/: .env
.github/workflows/: cd.yml  ci.yml
airflow_home/: airflow.cfg  airflow.db
configs/: feature_config.yaml  model_config.yaml  monitoring_config.yaml
dashboards/: grafana_dashboard.json  streamlit_app.py
dashboards/reports/: data_drift_report_1776716367.html  data_drift_report_1776716472.html  data_drift_report_1776716514.html  data_drift_report_1776716654.html  data_drift_report_1776716728.html  data_drift_report_1776717030.html  data_drift_report_1776717084.html  data_drift_report_1776717085.html  data_drift_report_1776717119.html  data_drift_report_1776717120.html  data_drift_report_1776717146.html  data_drift_report_1776717147.html  data_drift_report_1776717157.html  data_drift_report_1776717158.html  data_drift_report_1776799333.html  data_drift_report_1776799335.html  data_drift_report_1776989163.html  (+3 more)
docs/: architecture.md  lifecycle_test.md  load_test_results
gx/: great_expectations.yml
infra/: Dockerfile.serving  Dockerfile.training
mlflow/: mlflow.db  readme.md
notebooks/: 01_eda.ipynb
scripts/: verify_feast.py
src/configs/: __init__.py  (+2 more)
tests/: load_test.py  test_api.py  test_features.py  test_integration.py  test_model.py  test_model1.py  test_monitoring.py
(+74 files in other folders)
