[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-project"
version = "0.1.0"
description = "End-to-end MLOps project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xgboost==2.1.1",
    "lightgbm==4.5.0",
    "scikit-learn==1.5.1",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "feast[redis]==0.40.1",
    "mlflow==2.15.1",
    "great-expectations==1.1.3",
    "fastapi==0.112.2",
    "uvicorn==0.30.6",
    "confluent-kafka==2.5.3",
    "evidently==0.4.39",
    "pydantic-settings==2.4.0",
    "structlog==24.4.0",
    "optuna==3.6.1",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.6.3",
    "black==24.8.0",
    "isort==5.13.2"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
